('GSM' is Greg Sabino Mullane, greg@turnstep.com)

1.44
	- Rewrite and optimize the do() method. Should be much faster 
		when called without placeholders. Thanks to Tom Lane 
		for suggesting this. [GSM]
	- Double check PQserverVersion return and use alternate 
		method if it returns 0 (CPAN bug #14302)
	- Add support for specifying type in $dbh->quote(), 
		such as $dbh->quote($var, {pg_type => DBD::Pg::PG_BYTEA}).
		Also support type => SQL_xx [GSM] (fixes CPAN bug #13942)
	- Fix pg_notifies() bug (CPAN bug #14232) [door@lcpi.ru] 
	- Add pg_ping() method [GSM]
	- Make sure ping returns true, even if in failed transaction state.
		[thanks to Bill Moseley] [GSM]
	- Fix COPY-related core dump [GSM]
	- Fix strncpy bug in quote.c [Jun Kuriyama]
	- Fix error in is_high_bit_set(). [Alexey Tourbin] (CPAN bug #13406)

1.43 June 23, 2005
	- Added README.dev file. [GSM]
	- Fix statement-name related core dump. [GSM]
	- Ensure state() returns an empty string, not 00000 on success.
		(CPAN bug #13237) [michael.bell@web.de of OpenCA] [GSM]
	- Fix rare core dump when $sth still in scope after disconnect [GSM]
	- Enhancements to README.win32 [fenlisesi@gmail.com]
	- Fix incorrect sprintf calls (CPAN bug #12204)
		[Jakub Jelinek]
	- Fix get_info(18) ("ODBCVERSION") (CPAN bug #12968)
		[thanks to szinger@lanl.gov] [GSM]

1.42 May 21, 2005
	- Fix minor issues with copying and bytea quoting on older 
		servers. Fix some other memory leaks. [GSM]
	- Fix backslash parsing in statements (CPAN bug #12870)
		[felix.klee@inka.de] [GSM]
	- Make rollback/commit reset copy state (CPAN bug #12866)
		[imb@rentrak.com] [GSM]
	- Make sure lo_creat issues a begin if necessary [GSM]
	- Fix incorrect behavior when AutoCommit switched on. (CPAN bug #12748)
		[thanks to Vivek Khera] [GSM]
	- Have last_insert_id use set_err, not die. (CPAN bug #12503)
		[thanks to Alexandra Walford] [GSM]
	- Fixed tests to correctly handle older DBI versions reporting 
		failures on last_insert_id() (CPAN bug #12204)